--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
           <li><a>GO-FUTURE</a></li>
           <li><a>GO-GREEN</a></li>
-          <li><a><GO-HEALTHY></GO-HEALTHY></a></li>
+          <li><a>GO-HEALTHY</GO-HEALTHY></a></li>
         </ul>
       </div>
     </div>
@@ -80,7 +80,7 @@
   <div class="hero-overlay bg-opacity-60"></div>
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">HAlO</h1>
+      <h1 class="mb-5 text-5xl font-bold">HALO</h1>
       <p class="mb-5">
         Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
         quasi. In deleniti eaque aut repudiandae et a id nisi.
