--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
           <li><a>GO-FUTURE</a></li>
           <li><a>GO-GREEN</a></li>
-          <li><a>GO-HEALTHY</GO-HEALTHY></a></li>
+          <li><a>GO-HEALTHY</a></li>
         </ul>
       </div>
     </div>
@@ -76,7 +76,7 @@
   <!-- hero background start -->
   <section
   class="hero min-h-screen"
-  style="background-image: url(https://t3.ftcdn.net/jpg/05/56/29/10/240_F_556291020_q2ieMiOCKYbtoLITrnt7qcSL1LJYyWrU.jpg);">
+  style="background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20240611/pngtree-natures-palette-green-and-blue-harmony-image_15866482.jpg);">
   <div class="hero-overlay bg-opacity-60"></div>
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
@@ -92,20 +92,6 @@
 <!-- hero background end -->
 
 <!-- ABOUT -->
-<section class="flex justify-center item-center gap-10 py-20">
-  <div>
-    <h1 class="font-bold text-x">About me</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, culpa!
-    </p>
-  </div>
-  <div class="avatar">
-    <div class="w-96 rounded-full">
-      <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
-    </div>
-  </div>
- </section>
-
 <nav class="diff aspect-[16/9]">
   <div class="diff-item-1">
     <div class="bg-primary text-primary-content grid place-content-center text-9xl font-black">
