--- a/index.html
+++ b/index.html
@@ -91,6 +91,44 @@
   </section>
 <!-- hero background end -->
 
+<div class="stats shadow flex justify-center items-center gap-6">
+  <div class="stat">
+    <div class="stat-figure text-primary">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-8 w-8 stroke-current">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
+      </svg>
+    </div>
+    <div class="stat-title">Total Likes</div>
+    <div class="stat-value text-primary">25.6K</div>
+    <div class="stat-desc">21% more than last month</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-figure text-secondary">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-8 w-8 stroke-current">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+      </svg>
+    </div>
+    <div class="stat-title">Page Views</div>
+    <div class="stat-value text-secondary">2.6M</div>
+    <div class="stat-desc">21% more than last month</div>
+  </div>
+
+  <div class="stat">
+    <div class="stat-figure text-secondary">
+      <div class="avatar online">
+        <div class="w-16 rounded-full">
+          <img src="https://wallpapershome.com/images/pages/pic_h/5186.jpg" />
+        </div>
+      </div>
+    </div>
+    <div class="stat-value">86%</div>
+    <div class="stat-title">Tasks done</div>
+    <div class="stat-desc text-secondary">31 tasks remaining</div>
+  </div>
+</div>
+</nav>
+
 <!-- ABOUT -->
 <nav class="diff aspect-[16/9]">
   <div class="diff-item-1">
@@ -99,7 +137,7 @@
     </div>
   </div>
   <div class="diff-item-2">
-    <div class="bg-base-200 grid place-content-center text-9xl font-black">HACKER</div>
+    <div class="bg-base-200 grid place-content-center text-9xl font-black">ACTIVIST</div>
   </div>
   <div class="diff-resizer"></div>
 </nav>
@@ -107,10 +145,10 @@
 <!-- Footer Start -->
 <footer class="footer footer-center bg-base-200 text-base-content rounded p-10">
   <nav class="grid grid-flow-col gap-4">
-    <a class="link link-hover">About us</a>
-    <a class="link link-hover">Contact</a>
-    <a class="link link-hover">Jobs</a>
-    <a class="link link-hover">Press kit</a>
+    <a href ="https://www.linkedin.com/in/aditiya-widodo-putra-984047291?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="link link-hover">About us</a>
+    <a href ="https://wa.me/6289516028710" target="_blank" class="link link-hover">Contact</a>
+    <a href="https://tryhackme.com/r/p/AditiyaWP" class="link link-hover">Jobs</a>
+    <a href="https://www.instagram.com/adit_widodoputra/profilecard/?igsh=MXRmc2ttemp0YWhweg==" class="link link-hover">Information</a>
   </nav>
   <nav>
     <div class="grid grid-flow-col gap-4">
@@ -150,7 +188,7 @@
     </div>
   </nav>
   <aside>
-    <p>Copyright © {new Date().getFullYear()} - All right reserved by ACME Industries Ltd</p>
+    <p>Copyright © Aditiya WP 2024</p>
   </aside>
 </footer>
 <!-- Footer End -->
