--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- navbar start -->
-  <nav class="navbar bg-base-100">
+  <nav class="navbar bg-base-100 bg-opacity-75">
     <div class="navbar-start">
       <div class="dropdown">
         <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
@@ -77,14 +77,13 @@
   <section
   class="hero min-h-screen"
   style="background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20240611/pngtree-natures-palette-green-and-blue-harmony-image_15866482.jpg);">
-  <div class="hero-overlay bg-opacity-60"></div>
+  <div class="hero-overlay bg-opacity-75"></div>
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">HALO</h1>
-      <p class="mb-5">
-        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-        quasi. In deleniti eaque aut repudiandae et a id nisi.
-      </p>
+      <h1 class="mb-5 text-5xl font-bold">HELLO</h1>
+      <h2 class="mb-5">
+        PECINTA LINGKUNGAN
+      </h2>
       <button class="btn btn-primary">Get Started</button>
     </div>
   </div>
@@ -143,14 +142,48 @@
 </nav>
 
 <!-- Footer Start -->
-<footer class="footer footer-center bg-base-200 text-base-content rounded p-10">
-  <nav class="grid grid-flow-col gap-4">
+<footer class="footer bg-base-200 text-base-content p-10">
+  <nav>
+    <h6 class="footer-title">Services</h6>
+    <a class="link link-hover">Branding</a>
+    <a class="link link-hover">Design</a>
+    <a class="link link-hover">Marketing</a>
+    <a class="link link-hover">Advertisement</a>
+  </nav>
+  <nav>
+    <h6 class="footer-title">Company</h6>
     <a href ="https://www.linkedin.com/in/aditiya-widodo-putra-984047291?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="link link-hover">About us</a>
     <a href ="https://wa.me/6289516028710" target="_blank" class="link link-hover">Contact</a>
     <a href="https://tryhackme.com/r/p/AditiyaWP" class="link link-hover">Jobs</a>
-    <a href="https://www.instagram.com/adit_widodoputra/profilecard/?igsh=MXRmc2ttemp0YWhweg==" class="link link-hover">Information</a>
+    <a href="https://www.instagram.com/adit_widodoputra/profilecard/?igsh=MXRmc2ttemp0YWhweg==" class="link link-hover">Press kit</a>
   </nav>
   <nav>
+    <h6 class="footer-title">Legal</h6>
+    <a class="link link-hover">Terms of use</a>
+    <a class="link link-hover">Privacy policy</a>
+    <a class="link link-hover">Cookie policy</a>
+  </nav>
+</footer>
+<footer class="footer bg-base-200 text-base-content border-base-300 border-t px-10 py-4">
+  <aside class="grid-flow-col items-center">
+    <svg
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      xmlns="http://www.w3.org/2000/svg"
+      fill-rule="evenodd"
+      clip-rule="evenodd"
+      class="fill-current">
+      <path
+        d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path>
+    </svg>
+    <p>
+      ACME Industries Ltd.
+      <br />
+      Providing reliable tech since 1992
+    </p>
+  </aside>
+  <nav class="md:place-self-center md:justify-self-end">
     <div class="grid grid-flow-col gap-4">
       <a>
         <svg
@@ -187,10 +220,6 @@
       </a>
     </div>
   </nav>
-  <aside>
-    <p>Copyright © Aditiya WP 2024</p>
-  </aside>
 </footer>
-<!-- Footer End -->
 </body>
 </html>
