--- a/index.html
+++ b/index.html
@@ -37,6 +37,53 @@
     <div class="navbar-center">
       <a class="btn btn-ghost text-xl">GO-GREEN</a>
     </div>
+    <div class="px-4 py-2">
+  <ul class="menu bg-base-200 lg:menu-horizontal rounded-box flex items-center space-x-4">
+    <li>
+      <a class="flex items-center space-x-2">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+        </svg>
+        <span>Inbox</span>
+        <span class="badge badge-sm"></span>
+      </a>
+    </li>
+    <li>
+      <a class="flex items-center space-x-2">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        <span>Updates</span>
+        <span class="badge badge-sm badge-warning">NEW</span>
+      </a>
+    </li>
+    <li>
+      <a class="flex items-center space-x-2">
+        <span>Stats</span>
+        <span class="badge badge-xs badge-info"></span>
+      </a>
+    </li>
+  </ul>
+</div>
+
     <div class="navbar-end">
       <button class="btn btn-ghost btn-circle">
         <svg
@@ -97,9 +144,9 @@
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
       </svg>
     </div>
-    <div class="stat-title">Total Likes</div>
-    <div class="stat-value text-primary">25.6K</div>
-    <div class="stat-desc">21% more than last month</div>
+    <div class="stat-title">GO-HEALTHY</div>
+    <div class="stat-value text-primary">4 MILIAR</div>
+    <div class="stat-desc">EMISI KARBON BERKURANG</div>
   </div>
 
   <div class="stat">
@@ -108,9 +155,9 @@
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
       </svg>
     </div>
-    <div class="stat-title">Page Views</div>
-    <div class="stat-value text-secondary">2.6M</div>
-    <div class="stat-desc">21% more than last month</div>
+    <div class="stat-title">GO GREEN</div>
+    <div class="stat-value text-secondary">3 TRILIUN</div>
+    <div class="stat-desc">JUMLAH POHON DI DUNIA 2024</div>
   </div>
 
   <div class="stat">
@@ -121,9 +168,9 @@
         </div>
       </div>
     </div>
-    <div class="stat-value">86%</div>
-    <div class="stat-title">Tasks done</div>
-    <div class="stat-desc text-secondary">31 tasks remaining</div>
+    <div class="stat-value">66%</div>
+    <div class="stat-title"></div>
+    <div class="stat-desc text-secondary">Daur ulang total sampah.</div>
   </div>
 </div>
 </nav>
